# MethaneAsteroids

./: .gitignore  .gitpod.dockerfile  .gitpod.yml  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: asteroids-build.yml  ci-build.yml
App/: AsteroidsApp.cpp  AsteroidsApp.h  AsteroidsAppController.cpp  AsteroidsAppController.h  CMakeLists.txt
Modules/: CMakeLists.txt
Modules/PerlinNoise/: CMakeLists.txt  PerlinNoise.cpp  PerlinNoise.h
Modules/Simulation/: Asteroid.cpp  Asteroid.h  AsteroidsArray.cpp  AsteroidsArray.h  CMakeLists.txt  Planet.cpp  Planet.h
Modules/Simulation/Shaders/: AsteroidUniforms.h  Asteroids.hlsl  Planet.hlsl
